@@ -10,6 +10,10 @@ be mentioned in the 4.06 section below instead of here.)
 
 ### Type system:
 
+- GPR#1370: Fix code duplication in Cmmgen
+  (Vincent Laviron, with help from Pierre Chambart,
+   reviews by Gabriel Scherer and Luc Maranget)
+
 ### Standard library:
 
 ### Other libraries:
